getting contacts from phone list and listing in contact activity which one uses EddySap

--- a/EddySapClone/app/src/main/res/layout/activity_phone_login.xml
+++ b/EddySapClone/app/src/main/res/layout/activity_phone_login.xml
@@ -111,6 +111,7 @@ limitations under the License.-->
             android:inputType="number"
             android:maxLines="1"
             android:maxLength="6"
+            android:visibility="gone"
             android:hint="@string/enter_code"
             android:maxHeight="48dp"/>
     </LinearLayout>
