--- a/EddySapClone/app/src/main/res/layout/activity_main.xml
+++ b/EddySapClone/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,15 @@
     android:orientation="vertical"
     tools:context=".View.MainActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabaction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/cart_nesso"
+        android:layout_margin="20dp"
+        android:contentDescription="@string/floating_bar" />
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
@@ -53,15 +62,19 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_action"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+
+    <ImageButton
+        android:id="@+id/edit_words"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/circle_bg_white"
+        android:src="@drawable/edit"
         android:layout_alignParentBottom="true"
-        android:src="@drawable/cart_nesso"
-        android:layout_margin="20dp"
-        android:contentDescription="@string/floating_bar" />
+        android:layout_marginBottom="90dp"
+        android:layout_alignParentEnd="true"
+        android:visibility="gone"
+        android:layout_marginEnd="25dp"/>
+
 
 </RelativeLayout>
 
