--- a/EddySapClone/app/src/main/res/layout/fragment_status.xml
+++ b/EddySapClone/app/src/main/res/layout/fragment_status.xml
@@ -14,6 +14,7 @@
     tools:context=".menu.StatusFragment">
 
     <LinearLayout
+        android:id="@+id/in_status"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
